--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -1831,13 +1831,7 @@
       "804/804 [==============================] - 1s 814us/step - loss: 0.5376 - accuracy: 0.7391\n",
       "Epoch 78/200\n",
       "804/804 [==============================] - 1s 809us/step - loss: 0.5370 - accuracy: 0.7415\n",
-      "Epoch 79/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 79/200\n",
       "804/804 [==============================] - 1s 811us/step - loss: 0.5376 - accuracy: 0.7404\n",
       "Epoch 80/200\n",
       "804/804 [==============================] - 1s 811us/step - loss: 0.5372 - accuracy: 0.7398\n",
@@ -2126,6 +2120,41 @@
     "#  YOUR CODE GOES HERE\n",
     "nn_model.save('AlphabetSoupCharity.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal of this neural network is to predict whether applicants will be successful if funded by Alphabet Soup.\n",
+    "\n",
+    "#### Data Preprocessing\n",
+    "* 'IS_SUCCESSFUL' column is used as our target variable 'y'\n",
+    "* 'APPLICATION_TYPE', 'AFFILIATION', 'CLASSIFICATION', 'USE_CASE', 'ORGANIZATION', 'STATUS', 'INCOME_AMT', 'SPECIAL_CONSIDERATIONS', 'ASK_AMT' is used as our features 'X' after encoding catagorical variables using <b>pd.getdummies()</b>\n",
+    "* 'EIN', 'NAME' columns are dropped from the data set because they are neither targets nor features\n",
+    "\n",
+    "#### Compiling, Training, and Evaluating the Model\n",
+    "* 2 hidden layer are choosen for our neural network model, 1st layer consists of 80 neural nodes with 42 input features and for 2nd layer 30 nodes are choosen.\n",
+    "* Model performance on test data set - Loss: 0.57, Accuracy: 0.73 \n",
+    "* Increasing the number of Epoch for training the model didn't have much impact on the performance of the model. Choosing the right loss function for compiling the model helped train the model better.\n",
+    "\n",
+    "#### Summary\n",
+    "Given the complexity of the problem at hand this neural network model perfomed pretty good on the testing data set. But its always hard to explain the outcome with the neural network network model. \n",
+    "K-NN can also be used to solve this problem, as the applicants can be classified based on similarity. K-NN model during training phase can store the data and with the new data point will lie in which of these categories "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
